finished modules 1 and 2

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
         </section>
         <section class="controls">
           <section class="memory">
-            <button class="clear-all">CLEAR</button>
-            <button class="clear-entry">CLEAR ENTRY</button>
+            <button class="clear-all controls-buttons">CLEAR</button>
+            <button class="clear-entry controls-buttons">CLEAR ENTRY</button>
           </section>
           <section class="operations">
-            <button class="add">&plus;</button class="">
-            <button class="subtract">&minus;</button>
-            <button class="multiply">&times;</button>
-            <button class="divide">/</button>
-            <button class="equals">&equals;</button>
+            <button class="add operation-buttons">&plus;</button class="">
+            <button class="subtract operation-buttons">&minus;</button>
+            <button class="multiply operation-buttons">&times;</button>
+            <button class="divide operation-buttons">/</button>
+            <button class="equals operation-buttons">&equals;</button>
           </section>
           <section class="digits">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button class="decimal">.</button>
-            <button>0</button>
+            <button class="digits-buttons">7</button>
+            <button class="digits-buttons">8</button>
+            <button class="digits-buttons">9</button>
+            <button class="digits-buttons">4</button>
+            <button class="digits-buttons" >5</button>
+            <button class="digits-buttons">6</button>
+            <button class="digits-buttons">1</button>
+            <button class="digits-buttons">2</button>
+            <button class="digits-buttons">3</button>
+            <button class="decimal digits-buttons">.</button>
+            <button class="zero digits-buttons">0</button>
           </section>
         </section>
       </div>
